
	Added :media menu that can list and perform basic operations on removable
	media (requires helper to be available, see 'mediaprg').  Only for *nix
	systems.  Thanks to Bruce Hunsaker (a.k.a. hunsakerbn) and others.

	Added 'mediaprg' option that can be used to specify helper for managing
	removable media.  One such helper with support of udevil and udisks is
	provided.  Only for *nix systems.

	Added :tabn[ext] command, which works as gt normal mode shortcut.  Thanks
	to Cosmin Popescu (a.k.a. cosminadrianpopescu).

	:quit, :wq, :exit, :xit, ZZ and ZQ now try to close current tab before
	closing the application.

	More explicit documentation about leaving custom views.  Thanks to
	tagwint.

	Use historical cursor position upon startup by default when 'autochpos' is
	on, this is now independent from "savedirs" in 'vifminfo' option.  Thanks
	to filterfalse.

	Use historical cursor position on navigating to a mark that doesn't specify
	a file by default when 'autochpos' is on.  Thanks to filterfalse.

	Sort entries of :bmarks menu.  Thanks to anonymous at Vifm Q2A site.

	Drop unfinished if-else statements on leaving command-line mode.  Thanks
	to Marcin Kurczewski (a.k.a. rr-).

	Move cursor after p and P to one of files that were moved or to a cause of
	last conflict.  Thanks to filterfalse and ranousse.

	Less strict parsing of output of external command by :[un]select commands.
	Similar to %u/%U and menus allow <file>[:[<line>:[<col>:]] <description>]
	format.  Thanks to j-xella.

	Support italics in quickview/view mode and in :highlight when curses
	implementation provides corresponding extension.  PDCurses doesn't implement
	it on Windows.  Fallback is to use "reversed" attribute.  Thanks to
	GeorgeHJ.

	Escape "=" at the beginning of paths (has special meaning in zsh).  Thanks
	to agguser.

	More accurate error message on handling non directories passed to :cd.

	Slightly better formatting in :undolist menu.
