@@ -2736,6 +2736,15 @@ switch to the next tab (wrapping around).
 .BI ":tabn[ext] {n}"
 go to the tab number {n}.  Tab numeration starts with 1.
 .TP
+.BI "                                         :tabprevious"
+.TP
+.BI ":tabp[revious]"
+switch to the previous tab (wrapping around).
+.TP
+.BI ":tabp[revious] {n}"
+go to the {n}-th previous tab.  Note that :tabnext handles its argument
+differently.
+.TP
 .BI "                                         :touch"
 .TP
 .BI ":[line]touch file..."
