@@ -413,6 +413,14 @@ tabn
 tabne
 tabnex
 tabnext
+tabp
+tabpr
+tabpre
+tabprev
+tabprevi
+tabprevio
+tabpreviou
+tabprevious
 
 " "hi" should be highlighted as :command and its argument as highlight group
 hi CurrLine
